--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cyberwizard/dbsafeguard": "dev-main",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "spatie/laravel-backup": "^9.1",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
